# esc-w26

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  MainModel_simscape.slxc  README.md  bldcVariablesData.mat
Sim stuff/: MainModel_simscape.slxc
commutation/inc/: trapezoidal.h
commutation/src/: trapezoidal.c
core/: core.md
core/inc/: esc.h  esc_command.h  esc_fault_manager.h  esc_feedback.h  esc_state_machine.h  motor.h  sample_file.h  trapezoidal.h
core/src/: esc.c  esc_command.c  esc_fault_manager.c  esc_feedback.c  esc_state_machine.c  main.c  motor.c  sample_file.c  trapezoidal.c
docs/templates/: sample.c  sample.h  sample_blank.c  sample_blank.h
feedback/inc/: sensored.h
feedback/src/: sensored.c
hal/common/: common.md
hal/common/inc/: adc.h  fault.h  gpio.h  hal_adc.h  hal_fault.h  hal_gpio.h  hal_pwm.h  hal_time.h  pwm.h  time.h  timing.h
hal/host/: host.md
hal/host/inc/: host_state.h  host_test_utils.h
hal/host/src/: adc.c  fault.c  gpio.c  host_state.c  host_test_utils.c  pwm.c  time.c  timing.c
hal/stm32/: stm32.md
hw/libs/3dmodels/: CAP_YX_6P3X11_RUB.step  CAP_YX_8X20_RUB.step  EKY_101ETD101MJ20S.step  FUSE_0679L9200-05_BEL.step  GSFP06120.step  LTC4368IMS-2-TRPBF.step  PG-TDSON-8-62_Z8B00219022_V01_3D.stp  PMOSGDS_TO-252_DPAK_GAS.step  QFN_IN32G4_STM.step  SMD4_RH100_2P5X3P2-2P2_RAL.step  SOIC8_751EB_OSI.step  STPS1H100A.step  STSPIN32G4.step
hw/libs/symbols/: 7461001.kicad_sym  ASPI-6045S-180M-T.kicad_sym  CB2518T330K.kicad_sym  EKY_101ETD101MJ20S.kicad_sym  GSFP06120.kicad_sym  IND_TAIYO_CB2518_TAY.step  IPT015N10N5.kicad_sym  LM5060MMNOPB.kicad_sym  LM74502DDFR.kicad_sym  LMR51610XDBVR.kicad_sym  LTC4368HMS-1-WPBF.kicad_sym  LTC4368IMS-2-TRPBF.kicad_sym  RH100_32_000_10_F_2020_EXT_TR.kicad_sym  STPS1H100A.kicad_sym  XT60PW-M.kicad_sym  (+3 more)
hw/project/: #auto_saved_files#  _autosave-control.kicad_sch  _autosave-peripherals.kicad_sch  _autosave-untitled.kicad_sch  control.kicad_sch  drive.kicad_sch  esc.kicad_pro  esc.kicad_sch  fp-lib-table  peripherals.kicad_sch  power.kicad_sch  sym-lib-table
platform/common/: common.md
sims/: MainModel_simscape.slx  sims.md
sims/bldc-poc/: MainModel_simscape.html
sims/input-protection/: in-prot.asc  in-prot.op.raw  in-prot.raw  typical-application.asc  typical-application.op.raw  typical-application.raw
utils/: utils.md
(+55 files in other folders)
